[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/menus/sprites/star.png" type="Texture" id=1]
[ext_resource path="res://assets/menus/sprites/moon.png" type="Texture" id=2]
[ext_resource path="res://scripts/loading_screen.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/latin.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0.72549, 0.286275, 0.305882, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0.72549, 0.286275, 0.305882, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "quote_hide"
tracks/0/type = "value"
tracks/0/path = NodePath("line_02:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("author:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("line_01:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "quote_show"
tracks/0/type = "value"
tracks/0/path = NodePath("line_02:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("author:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("line_01:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "spin"
step = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("moon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 0 ), Vector2( -125, 0 ), Vector2( 0, 0 ), Vector2( -100, 0 ), Vector2( -200, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("star:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -100, 0 ), Vector2( -200, 0 ), Vector2( -125, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("moon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 3, 3 ), Vector2( 5, 5 ), Vector2( 6, 6 ), Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("star:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6, 6 ), Vector2( 5, 5 ), Vector2( 4, 4 ), Vector2( 5, 5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("moon:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[node name="Control" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quote" type="Control" parent="."]
margin_left = 145.664
margin_top = 115.965
margin_right = 185.664
margin_bottom = 155.965
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_01" type="Label" parent="quote"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "saddasads"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_02" type="Label" parent="quote"]
margin_top = 32.0
margin_right = 132.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "asddsaasdads"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="author" type="Label" parent="quote"]
margin_top = 64.0
margin_right = 132.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "dsadsaasddsa"

[node name="AnimationPlayer" type="AnimationPlayer" parent="quote"]
anims/quote_hide = SubResource( 6 )
anims/quote_show = SubResource( 5 )

[node name="loading_animation" type="Node2D" parent="."]
position = Vector2( 1138.44, 578.413 )

[node name="moon" type="Sprite" parent="loading_animation"]
position = Vector2( -200, 0 )
scale = Vector2( 5, 5 )
z_index = 1
texture = ExtResource( 2 )

[node name="star" type="Sprite" parent="loading_animation"]
scale = Vector2( 5, 5 )
z_index = 2
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="loading_animation"]
anims/spin = SubResource( 1 )

[node name="Progress" type="ProgressBar" parent="."]
margin_left = 923.482
margin_top = 688.722
margin_right = 1173.48
margin_bottom = 704.722
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="quote/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
